syntax = "proto3";
package session;
option go_package = "./api";

message LoginCredentials{
    string Email = 1;
    string Pass  = 2;
} 

message LoginResponse{
    string Token = 1;
}

message SignupCredentials{
    string Email = 1;
    string Pass = 2;
    string Firstname = 3;
    string Lastname = 4;
}

message SignUpResponse{
    string Message = 1;
}

service UserService{
    rpc Login(LoginCredentials) returns (LoginResponse){}
    rpc SignUp(SignupCredentials) returns (SignUpResponse){}
}